Auto-commit: update project state